# VEng

./: CMakeLists.txt  README.md  imgui.ini
lib/luajit/src/: lj_errmsg.h  lj_lex.c  lj_lex.h  lj_parse.c  lj_parse.c.rej
src/: main.cpp
src/interfaces/: IEngine.hpp  IEngine_impl.cpp  IEngine_impl.h
src/render/: WindowModule.cpp  WindowModule.h
src/render/backend/: IRenderModule.h  SDLRenderModule.cpp  SDLRenderModule.h
src/render/ui/: UIModule.cpp  UIModule.h
src/render/ui/sdl_gpu/: UIModule_sg.cpp
src/render/ui/vulkan/: UIModule_vk.cpp
src/script_backend/lua/: LuaModule.hpp  hook_manager.cpp  hook_manager.h  lua_base.hpp  reg_api.cpp  reg_api.h
src/term/: term_wrapper.hpp
src/utils/math/: abs.h  all_math.h  approach.hpp  clamp.hpp  lerp.hpp  neg.h  remap.hpp
